- removed AuraCollection.GetAuraBySpell
-> Use instead: var aura = myGuy.Auras[spellid or spell or spelllineid or aurauid etc];