@@ -1,2 +1,4 @@
-- removed AuraCollection.GetAuraBySpell
--> Use instead: var aura = myGuy.Auras[spellid or spell or spelllineid or aurauid etc];
+- added NPC.SetEntry methods to dynamically change the entire NPC
+- fixed small bugs with taming pets 
+- fixed DruidSavageDefense
+- 
